# esp-idf-adxl345

./: CMakeLists.txt  I2C_MANAGER_README.md  Kconfig  README.md  adxl345.c  adxl345.h  component.mk
examples/read_xyz/: CMakeLists.txt  main.c  main.h
